--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,11 +1,12 @@
 name: "SonarCloud Analyze"
 run-name: SonarCloud Analyze [${{ github.ref_name }}]
 on:
-#  push:
-#    branches:
-#      - main
-#      - stage
-#      - snapshot/*
+  push:
+    branches:
+      - main
+      - stage
+      - dev
+      - snapshot/*
   workflow_dispatch:
 jobs:
   build:
